# byts

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/byts/: App.hpp  Byt.hpp  FoodObject.hpp  Sense.hpp  SenseMask.hpp  World.hpp  WorldObject.hpp
include/byts/render/: RenderResources.hpp  debug_draw.hpp  world_draw.hpp
src/: App.cpp  Byt.cpp  Byt.hpp  World.cpp  World.hpp  main.cpp
src/render/: RenderResources.cpp  debug_draw.cpp  world_draw.cpp
